@startuml Temulingo

skinparam DefaultFontName Helvetica
skinparam classBackgroundColor PaleGoldenrod
skinparam classBorderColor Black
skinparam classBorderThickness 1
skinparam classFontStyle bold
skinparam noteBackgroundColor Yellow
skinparam shadowing true
skinparam roundCorner 15
skinparam nodesep 50
skinparam ranksep 50

class LearningApp {
    + login()
}

class Usuario {
    - nombre: String
    - email: String
    + registrar()
    + iniciarSesion()
}

class Curso {
    - titulo: String
    - descripcion: String
    - crearCurso()
}

class CatalogoUsuarios {
    + getUsuario()
    + addUsuario()
}

class CatalogoCursos {
    + getCurso()
    + addCurso()
}

class Estadisticas {
    - usuarioId: int
    - tiempoUso: int
    - mejorRacha: int
    + actualizarEstadisticas()
}

class Progreso {
    - usuario: Usuario
    - curso: Curso
}

interface CargadorCursos {
    + cargarCurso()
}

class CargadorCursosJSON implements CargadorCursos {
    + cargarCurso()
}

class CargadorCursosXML implements CargadorCursos {
    + cargarCurso()
}

class Bloque {
    - nombre: String
    - descripción: String
}

abstract class Pregunta {
    - enunciado: String
}

class PreguntaTest {

}

class PreguntaHuecos {
    
}

class PreguntaTraduccion {
    
}

note right of LearningApp : Controlador

hide LearningApp attributes
hide CatalogoUsuarios attributes
hide CatalogoCursos attributes
hide CargadorCursos attributes
hide CargadorCursosXML attributes
hide CargadorCursosJSON attributes

hide PreguntaTest attributes
hide PreguntaHuecos attributes
hide PreguntaTraduccion attributes


LearningApp *-- "1" CatalogoCursos
LearningApp *-- "1" CatalogoUsuarios

Usuario *-down- "1" Progreso
Curso *-- "1" Progreso

CatalogoUsuarios *-- "0..*" Usuario
CatalogoCursos *-- "0..*" Curso

Usuario "1" -right- "*" Curso : crea >
Usuario "1" -left- "1" Estadisticas : tiene

CatalogoCursos o-right- CargadorCursos : usa

Curso "1" -down- "1..*" Bloque

Bloque "1" -- "1..*" Pregunta

Pregunta <|-- PreguntaTest
Pregunta <|-- PreguntaHuecos
Pregunta <|-- PreguntaTraduccion

@enduml
